// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<span
  className="cf-modal__close"
  onClick={[Function]}
>
  <i
    className="cf-17bf5fe"
    id={undefined}
    style={undefined}
  >
    <span
      className="cf-1u9fru1"
      id={undefined}
      style={undefined}
    />
  </i>
</span>
`;

exports[`should render with a label 1`] = `
<span
  className="cf-modal__close"
  onClick={[Function]}
>
  <i
    className="cf-17bf5fe"
    id={undefined}
    style={undefined}
  >
    <span
      className="cf-1u9fru1"
      id={undefined}
      style={undefined}
    >
      label
    </span>
  </i>
</span>
`;
